STM32 DFU improvements